welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:23: error: value Orange is not a member of object java.awt.Color
fairF(Color.Orange);
            ^